classDiagram
    direction TB

    namespace Infrastructure_REST {
        class OrdemServicoResourceImpl {
            +entregarOrdemServico(ordemServicoId) Response
        }
    }

    namespace Infrastructure_CrossCutting {
        class AuditoriaProxy {
            <<cross-cutting>>
            +envolver(T, Class~T~, RegistrarAuditoriaPort) T
            -interceptar(method, args) Any
        }
    }

    namespace Application_Ports_In {
        class EntregarOrdemServicoUseCase {
            <<interface>>
            +entregarOrdemServico(ordemServicoId) ResumoOrdemServicoResDTO
        }
    }

    namespace Application_Service {
        class EntregarOrdemServicoService {
            +entregarOrdemServico(ordemServicoId) ResumoOrdemServicoResDTO
            -validarPapelMecanico(solicitante)
        }
    }

    namespace Application_Ports_Out {
        class JwtPort {
            <<interface>>
            +getUsuarioId() UsuarioId
        }
        class UsuarioRepositoryPort {
            <<interface>>
            +buscarPorId(UsuarioId) Usuario?
        }
        class OrdemServicoRepositoryPort {
            <<interface>>
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class RegistrarAuditoriaPort {
            <<interface>>
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    namespace Domain {
        class OrdemServico {
            <<aggregate root>>
            +status StatusOrdemServico
            +entregar()
        }
    }

    namespace Infrastructure_Adapters {
        class JwtAdapter {
            +getUsuarioId() UsuarioId
        }
        class UsuarioRepositoryAdapter {
            +buscarPorId(UsuarioId) Usuario?
        }
        class OrdemServicoRepositoryAdapter {
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class AuditoriaRepositoryAdapter {
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    OrdemServicoResourceImpl --> EntregarOrdemServicoUseCase : invoca

    AuditoriaProxy ..|> EntregarOrdemServicoUseCase : wrap (Java Proxy)
    AuditoriaProxy --> EntregarOrdemServicoService : delega execução
    AuditoriaProxy --> RegistrarAuditoriaPort : notifica após @Auditavel

    EntregarOrdemServicoService ..|> EntregarOrdemServicoUseCase : implementa
    EntregarOrdemServicoService --> JwtPort : getUsuarioId()
    EntregarOrdemServicoService --> UsuarioRepositoryPort : buscarPorId()
    EntregarOrdemServicoService --> OrdemServicoRepositoryPort : buscarPorId() atualizar()
    EntregarOrdemServicoService --> OrdemServico : entregar()

    JwtAdapter ..|> JwtPort : implementa
    UsuarioRepositoryAdapter ..|> UsuarioRepositoryPort : implementa
    OrdemServicoRepositoryAdapter ..|> OrdemServicoRepositoryPort : implementa
    AuditoriaRepositoryAdapter ..|> RegistrarAuditoriaPort : implementa
